DFG local CSE for a node can be terminated earlier https://bugs.webkit.org/show_bug.cgi?id=80014

Reviewed by Filip Pizlo.

When one of the node's childredn is met in the process of back traversing
the nodes, we don't need to traverse the remaining nodes.
This is performance neutral on SunSpider, V8 and Kraken.

* dfg/DFGCSEPhase.cpp:
(JSC::DFG::CSEPhase::pureCSE):
(JSC::DFG::CSEPhase::impureCSE):
(JSC::DFG::CSEPhase::getByValLoadElimination):
(JSC::DFG::CSEPhase::checkFunctionElimination):
(JSC::DFG::CSEPhase::checkStructureLoadElimination):
(JSC::DFG::CSEPhase::getByOffsetLoadElimination):
(JSC::DFG::CSEPhase::getPropertyStorageLoadElimination):
(JSC::DFG::CSEPhase::getIndexedPropertyStorageLoadElimination):


git-svn-id: svn://svn.chromium.org/blink/trunk@109325 bbb929c8-8fbe-4397-9dbb-9b2b20218538