third_party/WebKit/Source/JavaScriptCore/dfg/DFGCSEPhase.cpp
@@ -91,6 +91,9 @@ private:
         
         for (unsigned i = endIndexForPureCSE(); i-- > m_currentBlock->startExcludingPhis;) {
             NodeIndex index = m_currentBlock->at(i);
+            if (index == child1 || index == child2 || index == child3)
+                break;
+
             Node& otherNode = m_graph[index];
             if (node.op != otherNode.op)
                 continue;
@@ -175,6 +178,9 @@ private:
         
         for (unsigned i = m_indexInBlock; i-- > m_currentBlock->startExcludingPhis;) {
             NodeIndex index = m_currentBlock->at(i);
+            if (index == child1 || index == child2 || index == child3)
+                break;
+
             Node& otherNode = m_graph[index];
             if (node.op == otherNode.op
                 && node.arithNodeFlagsForCompare() == otherNode.arithNodeFlagsForCompare()) {
@@ -227,6 +233,9 @@ private:
     {
         for (unsigned i = m_indexInBlock; i-- > m_currentBlock->startExcludingPhis;) {
             NodeIndex index = m_currentBlock->at(i);
+            if (index == child1 || index == canonicalize(child2)) 
+                break;
+
             Node& node = m_graph[index];
             switch (node.op) {
             case GetByVal:
@@ -268,6 +277,9 @@ private:
     {
         for (unsigned i = endIndexForPureCSE(); i-- > m_currentBlock->startExcludingPhis;) {
             NodeIndex index = m_currentBlock->at(i);
+            if (index == child1) 
+                break;
+
             Node& node = m_graph[index];
             if (node.op == CheckFunction && node.child1() == child1 && node.function() == function)
                 return true;
@@ -279,6 +291,9 @@ private:
     {
         for (unsigned i = m_indexInBlock; i-- > m_currentBlock->startExcludingPhis;) {
             NodeIndex index = m_currentBlock->at(i);
+            if (index == child1) 
+                break;
+
             Node& node = m_graph[index];
             switch (node.op) {
             case CheckStructure:
@@ -322,6 +337,9 @@ private:
     {
         for (unsigned i = m_indexInBlock; i-- > m_currentBlock->startExcludingPhis;) {
             NodeIndex index = m_currentBlock->at(i);
+            if (index == child1) 
+                break;
+
             Node& node = m_graph[index];
             switch (node.op) {
             case GetByOffset:
@@ -365,6 +383,9 @@ private:
     {
         for (unsigned i = m_indexInBlock; i-- > m_currentBlock->startExcludingPhis;) {
             NodeIndex index = m_currentBlock->at(i);
+            if (index == child1) 
+                break;
+
             Node& node = m_graph[index];
             switch (node.op) {
             case GetPropertyStorage:
@@ -401,6 +422,9 @@ private:
     {
         for (unsigned i = m_indexInBlock; i-- > m_currentBlock->startExcludingPhis;) {
             NodeIndex index = m_currentBlock->at(i);
+            if (index == child1) 
+                break;
+
             Node& node = m_graph[index];
             switch (node.op) {
             case GetIndexedPropertyStorage: {
